Fix issue with overlapping grid styles in TodoItem and App
Needed to make certain the .wrapper class was not over-ridden by
the TodoItem grid style by changing the class names to be more
specific and unique.

The intenal class names for component elements don't seem to be an issue

--- a/src/components/App.grid.css
+++ b/src/components/App.grid.css
@@ -16,7 +16,7 @@
 
 
 /* Mobile display */
-.wrapper {
+.App_wrapper {
 	display: grid;
 	grid-template-areas:   
 		"header "
